Remove obsolete perm gen arguments from builds.