@@ -96,7 +96,7 @@
             <configuration>
               <skipTests>false</skipTests>
               <forkMode>always</forkMode>
-              <argLine>-Xms1g -Xmx1500m -XX:MaxPermSize=128m ${argLine}</argLine>
+              <argLine>-Xms1g -Xmx1500m ${argLine}</argLine>
 
               <additionalClasspathElements>
                 <additionalClasspathElement>${basedir}/target/classes/</additionalClasspathElement>
